# KI_image_classifier

./: .gitignore  README.md  datatree.txt  image_classifier_cnn.ipynb  image_classifier_random_forest.ipynb  pyproject.toml  results_slides
