[project]
name = "image-classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Jasmin Furche",email = "mine@booq.org"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "numpy (<=2.2.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "scikeras (>=0.13.0,<0.14.0)",
    "joblib (>=1.5.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

